# firecorn

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  Dockerfile  Dockerfile.multi  README.md  asgi.py  docker-compose.yml  grype.json  locust_report.html  locust_report_load_testing.html  locustfile.py  postgres.conf  pyproject.toml  pytest.ini  schema.sql  sonar-project.properties  test.db
.github/workflows/: build.yaml  scan.yaml  test.yaml
reports/: coverage.xml  pylint.json
reports/html/: index.html  src_api___init___py.html  src_api_modules___init___py.html  src_api_modules_comment___init___py.html  src_api_modules_comment_mutations_py.html  src_api_modules_comment_queries_py.html  src_api_modules_post___init___py.html  src_api_modules_post_mutations_py.html  src_api_modules_post_queries_py.html  src_api_modules_user___init___py.html  src_api_modules_user_mutations_py.html  src_api_modules_user_queries_py.html  src_api_schema_py.html  src_app_py.html  src_db_py.html  src_migrations_2021_06_10_151318_create_users_table_py.html  src_migrations_2021_06_10_151539_create_posts_table_py.html  src_migrations_2021_06_10_151546_create_comments_table_py.html  src_migrations___init___py.html  src_models___init___py.html  src_models_comment_py.html  src_models_post_py.html  src_models_user_py.html  src_serializers_py.html  src_settings_py.html  status.json
src/: .env  app.py  db.py  docker-compose.yaml  main.py  notify.py  serializers.py  settings.py
src/api/: schema.py
tests/: conftest.py  test_01_user.py  test_02_posts.py  test_03_comment.py  test_query.py
(+12 files in other folders)
